# pyproject-toml-rs

./: Cargo.toml  Changelog.md  README.md
.github/: dependabot.yml  renovate.json5
.github/workflows/: CI.yml  release.yml
src/: has_recursion.rs  lib.rs  optional_dependencies_resolve.rs  pep639_glob.rs  pep735_resolve.rs  resolution.rs
