[package]
name = "pyproject-toml"
version = "0.12.0"
description = "pyproject.toml parser in Rust"
edition = "2021"
license = "MIT"
keywords = ["pyproject", "pep517", "pep518", "pep621", "pep639"]
readme = "README.md"
repository = "https://github.com/PyO3/pyproject-toml-rs.git"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = { version = "0.3.1", optional = true }
indexmap = { version = "2.0.0", features = ["serde"] }
pep440_rs = { version = "0.6.0", features = ["serde"] }
pep508_rs = { version = "0.6.0", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
thiserror = { version = "1.0.61", optional = true }
toml = { version = "0.8.0", default-features = false, features = ["parse"] }

[features]
tracing = ["pep440_rs/tracing", "pep508_rs/tracing"]
pep639-glob = ["glob", "thiserror"]

[dev-dependencies]
insta = "1.40.0"
