[package]
name = "pyproject-toml"
version = "0.13.7"
description = "pyproject.toml parser in Rust"
edition = "2021"
license = "MIT"
keywords = ["pyproject", "pep517", "pep518", "pep621", "pep639"]
readme = "README.md"
repository = "https://github.com/PyO3/pyproject-toml-rs.git"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = { version = "0.3.1", optional = true }
indexmap = { version = "2.6.0", features = ["serde"] }
pep440_rs = { version = "0.7.2" }
pep508_rs = { version = "0.9.1" }
serde = { version = "1.0.214", features = ["derive"] }
thiserror = { version = "2.0.12" }
toml = { version = "0.9.4", default-features = false, features = ["parse", "serde", "std"] }

[features]
tracing = ["pep440_rs/tracing", "pep508_rs/tracing"]
pep639-glob = ["glob"]

[dev-dependencies]
insta = "1.41.0"
